# Math

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  compile_commandss.json  runtests
.github/workflows/: documentation.yaml  install.yml  macos.yml  style.yml  ubuntu.yml  windows.yml
benchmark/: CMakeLists.txt  dual_benchmark.cpp  dual_elt_benchmarks.cpp  expm_benchmark.cpp  expm_benchmark1.cpp  expm_benchmark1x2.cpp  expm_benchmark2.cpp  expm_benchmark2x2.cpp  expm_benchmark3.cpp  expm_benchmark3x2.cpp  expm_benchmark4.cpp  expm_benchmark4x2.cpp  expm_benchmark5.cpp  expm_benchmark5x2.cpp  expm_benchmark6.cpp  expm_benchmark6x2.cpp  expm_benchmark7.cpp  expm_benchmark7x2.cpp  expm_benchmark8.cpp  expm_benchmark8x2.cpp  integer_matrix_benchmarks.cpp  simplex_benchmark.cpp  tensor_benchmark.cpp
benchmark/include/: expm.hpp  randdual.hpp
cmake/: CPM.cmake
documentation/: CMakeLists.txt
include/: LoopMacros.hxx  Owner.hxx  jemalloc-new-delete.hxx
include/Alloc/: Arena.hpp  Mallocator.hpp  jemalloc-new-delete.hpp
include/Containers/: BitSets.hpp  Pair.hpp  Storage.hpp  TinyVector.hpp  Tuple.hpp  UnrolledList.hpp
include/Math/: Array.hpp  ArrayOps.hpp  ArrayOps3.hpp  AxisTypes.hpp  BoxOpt.hpp  BoxOptInt.hpp  Comparisons.hpp  Constraints.hpp  Constructors.hpp  Dual.hpp  EmptyArrays.hpp  Exp.hpp  ExpDual.hpp  GreatestCommonDivisor.hpp  Indexing.hpp  Iterators.hpp  LinearAlgebra.hpp  LinearDiophantine.hpp  Math.hpp  Matrix.hpp  MatrixDimensions.hpp  NormalForm.hpp  Orthogonalize.hpp  Rational.hpp  SIMD.hpp  SIMDWidth.hpp  SOA.hpp  Simplex.hpp  SmallSparseMatrix.hpp  StaticArrays.hpp  UniformScaling.hpp  Unimodularization.hpp  Vector.hpp  VectorGreatestCommonDivisor.hpp
include/SIMD/: Indexing.hpp  Intrin.hpp  Masks.hpp  Transpose.hpp  Unroll.hpp  Vec.hpp
include/Utilities/: Allocators.hpp  Arena.hpp  Assign.hpp  Invariant.hpp  ListRanges.hpp  LoopMacros.hpp  MatrixStringParse.hpp  Optional.hpp  Parameters.hpp  Reference.hpp  Show.hpp  TypeCompression.hpp  TypePromotion.hpp  Valid.hpp
mod/: STL.cxx
mod/Alloc/: Arena.cxx  Mallocator.cxx
mod/Bit/: Float.cxx
mod/Containers/: BitSets.cxx  Flat.cxx  Pair.cxx  Storage.cxx  TinyVector.cxx  Tuple.cxx  UnrolledList.cxx
mod/Math/: Array.cxx  ArrayConcepts.cxx  ArrayOps.cxx  AxisTypes.cxx  BoxOpt.cxx  BoxOptInt.cxx  CheckSizes.cxx  Comparisons.cxx  Constraints.cxx  Constructors.cxx  Dual.cxx  ElementarySIMD.cxx  EmptyArrays.cxx  ExpressionTemplates.cxx  Factor.cxx  GenericConstructors.cxx  GreatestCommonDivisor.cxx  Indexing.cxx  LinearAlgebra.cxx  LinearDiophantine.cxx  ManagedArray.cxx  MatrixDimensions.cxx  MultiplicativeInverse.cxx  NormalForm.cxx  Ranges.cxx  Rational.cxx  Reductions.cxx  SOA.cxx  Saturated.cxx  ScalarizeViaCastArrayOps.cxx  Simplex.cxx  SmallSparseMatrix.cxx  StaticArrays.cxx  UniformScaling.cxx  Unimodularization.cxx  VectorGreatestCommonDivisor.cxx
mod/Numbers/: Int8.cxx
mod/SIMD/: Indexing.cxx  Intrin.cxx  Masks.cxx  SIMD.cxx  Transpose.cxx  Unroll.cxx  UnrollIndex.cxx  Vec.cxx
mod/Utilities/: ArrayPrint.cxx  Invariant.cxx  ListRanges.cxx  MatrixStringParse.cxx  Optional.cxx  Parameters.cxx  Reference.cxx  TypeCompression.cxx  Valid.cxx  Widen.cxx
source/: greeter.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt  bit.cpp  bitset_test.cpp  boxopt_test.cpp  dual_test.cpp  linear_algebra_test.cpp  linear_diophantine_test.cpp  listrange_test.cpp  matrix_test.cpp  matrixexp_test.cpp  multiplicative_inverse.cpp  normal_form_test.cpp  number_tests.cpp  number_util_tests.cpp  optional_test.cpp  orthogonalize_test.cpp  saturated.cpp  simdgcd.cpp  simdtest.cpp  simplex_test.cpp  soa_test.cpp  string_to_intmat_test.cpp  tuple_test.cpp  typecompression.cpp  ulist_test.cpp  unimodularization_test.cpp
tools/: prettyprinters.py
